--- a/Idealy/Base.lproj/Main.storyboard
+++ b/Idealy/Base.lproj/Main.storyboard
@@ -175,12 +175,16 @@
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="P92-aT-o9P">
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="06r-RH-QHe" customClass="CircleView" customModule="Idealy" customModuleProvider="target">
+                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="06r-RH-QHe" customClass="CircleView" customModule="Idealy" customModuleProvider="target">
                                                 <color key="backgroundColor" red="0.35133126378059387" green="0.63923537731170654" blue="0.91063910722732544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="50" id="G5a-lo-d3K"/>
                                                     <constraint firstAttribute="height" constant="49" id="grc-gw-7Fx"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="sXA-Du-T2h" appends="YES" id="aXj-K9-eMd"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Post and idea..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wu1-1b-OgZ" customClass="EnhancedTextField" customModule="Idealy" customModuleProvider="target">
                                                 <nil key="textColor"/>
@@ -316,6 +320,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="imageAdd" destination="06r-RH-QHe" id="kHs-DR-7mN"/>
                         <outlet property="tableView" destination="mb4-rz-Y4b" id="yUe-5L-pAv"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="2TS-la-c04"/>
                     </connections>
@@ -324,6 +329,11 @@
                 <tapGestureRecognizer id="sEH-Bk-05x">
                     <connections>
                         <action selector="signInTapped:" destination="sga-Nv-tbW" id="mcm-cy-zaj"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="sXA-Du-T2h">
+                    <connections>
+                        <action selector="addImageTapped:" destination="sga-Nv-tbW" id="8Fx-op-jhz"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
